--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
+@plugin "daisyui";
+@plugin "daisyui" {
+  themes: winter, lemonade, dracula, cyberpunk, aqua;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #ffffff; /* White background */
+  --foreground: #000000; /* Black text */
 }
 
 @theme inline {
@@ -12,16 +16,14 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   padding: 1rem;
+}
+
+html, body {
+  height: 100%;
+  background: var(--background);
 }
